--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "express-status-monitor": "^1.2.6",
+    "express-validator": "^6.1.1",
     "fbgraph": "^1.4.4",
     "googleapis": "^42.0.0",
     "instagram-node": "^0.5.8",
@@ -55,6 +56,7 @@
     "node-sass": "^4.12.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.0",
+    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
@@ -79,7 +81,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.2.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.18.2",
